--- a/resources/main.css
+++ b/resources/main.css
@@ -387,7 +387,7 @@ button {
     
     .menu-social-icons {
         width: 100%;
-        height: 150px;
+        height: 120px;
         display: flex;
         justify-content: space-around;
         border-top: 1px solid gray;
@@ -401,11 +401,10 @@ button {
     
     hr {
         border: 1px solid #3d3d3d;
-        width: 150px;
+        width: 130px;
         transform: rotate(90deg);
-        position: absolute;
-        left: 42%;
-        bottom: 65px;
+        position: relative;
+        bottom: 60px;
     }
 
     /*CONTENT*/
@@ -551,7 +550,7 @@ button {
     }
 
     .menu-social-icons {
-        height: 100px;
+        height: 80px;
     }
 
     .menu-social-icons i {
@@ -560,7 +559,7 @@ button {
     }
     
     hr {
-        width: 95px;
+        width: 90px;
         bottom: 40px;
     }
 
